--- a/app/views/signup_mailer/confirmation_email.html.erb
+++ b/app/views/signup_mailer/confirmation_email.html.erb
@@ -6,7 +6,7 @@
   <body>
     <h2>Hi <%= @user.name %></h2>
     <p>
-      Thank you for registering on ASAR. Please click on the link below to verify your email.
+      Thank you for registering on BIRTS Grievance System. Please click on the link below to verify your email.
       <br><br>
       Click here:
       <%=@front_end_link%>/email/verify?verify_token=<%=@verification_code.verify_token%>&user_token=<%=@verification_code.user_token%>
